# words

./: .gitignore  manage.py  pyproject.toml
english_words/: asgi.py  settings.py  urls.py  wsgi.py
english_words_app/: api.py  apps.py  forms.py  models.py  tools.py  urls.py  views.py
english_words_app/migrations/: 0001_initial.py  0002_alter_word_data_alter_word_ru_and_more.py  0003_alter_word_data_alter_word_ru_profile.py  0004_alter_profile_favorites.py
english_words_app/static/css/: styles.css
english_words_app/static/js/: script.js
english_words_app/templates/english_words_app/: base.html  index.html  register.html  word_list.html  words_list.html
english_words_app/templates/registration/: logged_out.html  login.html
